src/test/ui/unsized-locals/by-value-trait-object-safety.stderr
error: the `foo` method cannot be invoked on a trait object
  --> $DIR/by-value-trait-object-safety.rs:28:7
   |
LL |     x.foo();
   |       ^^^

error: aborting due to previous error

